--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
             <input type="password" name="Password" placeholder="Password" />
           </div>
           <div class="input-box">
-            <input
-              type="password"
-              name="Cpassword"
-              placeholder="Confirm Password"
+            <input type="password" name="Cpassword" placeholder="Confirm Password"
             />
           </div>
           <div class="button">
-            <input class="btn" type="submit" value="Register"/>
+            <input class="btn" type="submit" value="Register" />
           </div>
           <div class="group">
             <span><a href="#">Forgot Password</a></span>
